--- a/Indochino/indochino.html
+++ b/Indochino/indochino.html
@@ -57,6 +57,7 @@
                         </ul>
                     </div>
                 </li>
+
                 <li class="nav-item">
                     <div class="dropdown">
                         <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
@@ -71,10 +72,9 @@
                 </li>
             </ul>
         </div>
-
-        <div class="d-flex justify-content-between" style=" height: 50px;">
-            <div><a href="#"><img src="img/logo.png" class="img mx-3 p-1"
-                        style="width: 150px; height : 47px; padding-top: 0;"></a></div>
+        <div class="d-flex justify-content-between">
+            <div><a href="#"><img src="img/logo.png" class="img mx-3 p-1" style="width: 150px; height : 47px;"></a>
+            </div>
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-light text-dark">New</button>
                 <button type="button" class="btn btn-outline-light text-dark">Suits</button>
@@ -90,12 +90,38 @@
                 <button type="button" class="btn btn-outline-light text-dark">Wedding</button>
                 <button type="button" class="btn btn-outline-light text-dark">Showrooms</button>
                 <button type="button" class="btn btn-outline-light text-dark">More</button>
-                <button type="button" class="btn btn-outline-light text-dark"><img src="img/account.png" width="23px"></button>
-                <button type="button" class="btn btn-outline-light text-dark"><img src="img/shop.png" width="23px"></i></button>
-                <button type="button" class="btn btn-outline-light text-dark"><img src="img/search.png" width="23px"></i></button>
+                <button type="button" class="btn btn-outline-light text-dark"><img src="img/account.png"
+                        width="23px"></button>
+                <button type="button" class="btn btn-outline-light text-dark"><img src="img/shop.png"
+                        width="23px"></i></button>
+                <button type="button" class="btn btn-outline-light text-dark"><img src="img/search.png"
+                        width="23px"></i></button>
             </div>
         </div>
     </header>
+    
+    <section>
+        <div class="sec container-fluid d-flex p-2">
+            <div class="mx-5 flex-fill"><img src="img/dress.png" width="40px"></div>
+            <div class="mx-5 flex-fill"><img src="img/apliances.png" width="40px"></div>
+            <div class="flex-fill"><img src="img/pic.png" width="40px"></div>
+        </div>
+        <div class="body">
+            <div class="row">
+                <div class="col-md pt-5"><img src="img/HpBannerWTWN.jpg" class="img-fluid px-2" width="1000px"></div>
+                <div class="col-md p-5">
+                    <p class="text-white pt-5">WHAT TO WEAR NOW</p>
+                    <h1 class="text-white">Premium Suits From $369</h1>
+                    <h6 class="text-white">USE CODE: PREM369</h6>
+                    <p class="text-white">Classic and versatile, our Premium collection makes the perfect everyday suit. Available in a 
+                        range of color they are ideal for just about any occasion.
+                    </p>
+                    <button>SHOP NOW</button>
+                    <p class="style text-white">*Online Only. select styles</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://kit.fontawesome.com/0e052eb6e4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
